--- a/full-projects-iii-team-1/Front/css/tijd.css
+++ b/full-projects-iii-team-1/Front/css/tijd.css
@@ -21,7 +21,7 @@ body{
     position: relative;
     height: 100%;
     background-image:linear-gradient(180deg, rgba(76,95,113,0) 8%, rgba(31,39,46,0) 57%, rgba(0,0,0,1) 100%)
-    ,url(/Front/img/BeatlesRoad.jpg);
+    ,url(../img/BeatlesRoad.jpg);
     background-size: cover;
     filter: brightness(35%);
     background-repeat: repeat;
