--- a/full-projects-iii-team-1/Front/css/video.css
+++ b/full-projects-iii-team-1/Front/css/video.css
@@ -47,6 +47,7 @@ p{
     margin-left: 10%;
     background-color: #53BFA5;
     font-family: 'Montserrat', sans-serif;
+    border: none;
     border-radius: 30px; 
     font-weight: 900;
     font-size: 1.1em;
